--- a/microservice-security/car-service/build.gradle
+++ b/microservice-security/car-service/build.gradle
@@ -30,6 +30,8 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.security.oauth:spring-security-oauth2')
+	compile('org.springframework.security:spring-security-jwt')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
