--- a/microservice-security/gateway/build.gradle
+++ b/microservice-security/gateway/build.gradle
@@ -35,6 +35,9 @@ ext {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-zuul')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.security.oauth:spring-security-oauth2')
+	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
+	compile('org.springframework.security:spring-security-jwt')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
@@ -43,5 +46,11 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
+processResources {
+	from ('src/main/webapp/dist') {
+		into 'public'
 	}
 }
