--- a/kafka-test/consumer/src/main/resources/application.properties
+++ b/kafka-test/consumer/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.kafka.consumer.group-id=test-consumer-group-1
+spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.auto-offset-reset=earliest
+#logging.level.org.springframework.kafka=DEBUG
